1.0.7.1
`perf + features: fix trail lag, gradient fill, color toggles, line width, auto-reveal field, 1.0.7`